[package]
name = "warp-api-template"
version = "0.0.1"
authors = ["zhubby <yanvalue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2.0"