[package]
name = "warp-api-template"
version = "0.0.1"
authors = ["zhubby <yanvalue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
thiserror = "1.0.20"
rand = "0.7.3"
futures = "0.3.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2.0"
dotenv = "0.15.0"
serde = "1.0.114"
serde_json = "1.0.59"
bincode = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","postgres","chrono","json" ] }
clap = "3.0.0-beta.2"